# stanford-cs240h

./: .gitignore  README  lab1.cabal  lab1.hs
lab1/: lab1.cabal  lab1.hs
lab2/: HilbertCombo.hs  HilbertCoordinates.hs  HilbertCurve.hs  HilbertRTree.hs  lab2.cabal  lab2.hs  rects2.txt  tests.hs  troubleshooting.txt
